deploy/overlays/local/node-vitala/components/openehrtool-gateway/openehrtool-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vitala-openehrtool-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: openehrtool.vitala.local.dh.unimaas.nl
    - name: http
      port: 80
      protocol: HTTP
      hostname: openehrtool.vitala.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vitala-openehrtool-route
  namespace: dh-health
spec:
  parentRefs:
    - name: vitala-openehrtool-gateway
  hostnames:
    - openehrtool.vitala.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vitala-openehrtool
          port: 9000
